<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messagesRcView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/messageEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:background="@color/dark_grey"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="#57585A"
        android:maxLines="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendMessageBtn"
        app:layout_constraintStart_toEndOf="@+id/attachFileBtn"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/attachFileBtn"
        android:layout_width="55dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:contentDescription="@string/attach_file"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/messageEditText"
        app:srcCompat="@drawable/ic_baseline_attach_file_24" />

    <ImageButton
        android:id="@+id/sendMessageBtn"
        android:clickable="true"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:contentDescription="@string/send_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/messageEditText"
        app:srcCompat="@drawable/ic_baseline_send_24" />

</androidx.constraintlayout.widget.ConstraintLayout>